# skar_py

./: .gitignore  changelog.md  dev.md  h3_gap_floor_report.md  justfile  meson.build  pyproject.toml  readme.md  todo.md
.github/workflows/: test.yml  wheels.yml
notebooks/: country_aspect_ratio.ipynb  dggs_survey.ipynb
scripts/countries/: README.md  countries.py
scripts/dggs/: README.md  calibrate.py  dggal_common.py  dnc_stress.py  dnc_sweep.py  expansion_plan.md  survey.py  validate_corners.py
scripts/dggs/cells/: README.md  _common.py  gen_a5.py  gen_dggal.py  gen_h3.py  gen_s2.py
scripts/dggs/explorations/: README.md  _common.py  ar_heatmap.py  ar_histograms.py  ar_vs_pca.py  dark_spots_cells.py  dark_spots_locate.py  dark_spots_verify.py
scripts/dggs_cache/: README.md  calibrate.py  dnc_check.py  dnc_stress.py  dnc_sweep.py  survey.py
scripts/dggs_cache/cells/: README.md  _common.py  gen_a5.py  gen_dggal.py  gen_h3.py  gen_s2.py
scripts/dggs_cache/explorations/: README.md  _common.py  ar_histograms.py  ar_vs_pca.py
scripts/dggs_cache/web/: README.md  _shared.js  app.js  build_data.py  build_ivea7h_full_ar.py  gen_ivea7h_full_geom.py  globe_full.html  index.html
scripts/dggs_old/: README.md  dggal_common.py  expansion_plan.md  validate_corners.py
scripts/dggs_old/explorations/: README.md  _common.py  ar_heatmap.py  dark_spots_cells.py  dark_spots_locate.py  dark_spots_verify.py
scripts/states/: README.md  states.py
src/cython/: _cy.pyx
src/skar/: __init__.py  convert.py  outcomes.py  plot.py  solver.py
src/zig/: build.zig  build.zig.zon  c_api.zig
tests/: test_bindings.py
