[build-system]
# meson-python drives meson, which compiles the Cython extension and
# links it against the Zig static archive.
requires = ["meson-python>=0.16", "ziglang>=0.15.2", "cython>=3.0"]
build-backend = "mesonpy"

[project]
name = "skar"
version = "0.1.0"
description = "Spherical aspect-ratio solver: tightest enclosing cone of a point set on the unit sphere."
readme = "readme.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AJ Friend", email = "ajfriend@gmail.com" }]
keywords = ["spherical", "aspect-ratio", "cone", "geometry", "geodesy", "geospatial", "optimization", "zig"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Zig",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.24"]

# skar.plot_cone needs matplotlib; the core solver doesn't.
[project.optional-dependencies]
plot = ["matplotlib>=3"]

[project.urls]
Homepage = "https://github.com/ajfriend/skar_py"
Repository = "https://github.com/ajfriend/skar_py"
Issues = "https://github.com/ajfriend/skar_py/issues"
"Upstream Zig package" = "https://github.com/ajfriend/skar_zig"

[dependency-groups]
# pytest/matplotlib for the suite; meson-python/ninja/cython/ziglang are
# skar's build backend, kept in the venv so a `--reinstall-package` rebuild
# reuses them (no-build-isolation) instead of re-staging a fresh isolated
# build env (~5s of copying ziglang etc.) every time. See [tool.uv].
dev = [
    "pytest>=8", "pytest-cov>=5", "matplotlib>=3",
    "meson-python>=0.16", "ninja", "cython>=3.0", "ziglang>=0.15.2",
]
lab = ["jupyterlab>=4", "matplotlib>=3", "h3", "geopandas>=1", "pyogrio", "s2sphere", "pya5"]
# scripts/dggs/survey.py — DGGS aspect-ratio survey deps.
dggs = ["matplotlib>=3", "h3>=4", "s2sphere", "pya5"]
# scripts/states + scripts/countries — geopandas-loaded vector examples.
geo = ["matplotlib>=3", "geopandas>=1", "pyogrio"]

[tool.pytest.ini_options]
addopts = [
    "--cov=skar",
    "--cov=tests",
    "--cov-branch",
    "--cov-report=term-missing",
]

[tool.coverage.run]
branch = true

# Non-editable installs put skar/ under site-packages; alias it back
# to src/skar/ so the coverage report shows the source path.
[tool.coverage.paths]
skar = ["src/skar", "*/site-packages/skar"]


[tool.cibuildwheel]
# uv installs the build deps (meson-python, ziglang, cython, numpy)
# faster than pip.
build-frontend = "build[uv]"
test-requires = ["pytest", "numpy"]
# Override pyproject.toml's addopts (which assume pytest-cov) — the
# coverage report is for local dev, not the per-wheel test envs.
test-command = "pytest {project}/tests -o addopts="

[tool.uv]
# Build skar against the project venv (whose `dev` group has the build
# backend) rather than a throwaway isolated env. Non-editable still, so
# `just test` rebuilds explicitly via `--reinstall-package` — but each
# rebuild reuses the venv's ziglang/meson/cython instead of re-staging
# them (~4s vs ~9s). Not editable: no rebuild-on-import hook.
no-build-isolation-package = ["skar"]
