[build-system]
# meson-python drives meson, which compiles the Cython extension and
# links it against the Zig static archive.
requires = ["meson-python>=0.16", "ziglang>=0.15.2", "cython>=3.0"]
build-backend = "mesonpy"

[project]
name = "skar"
version = "0.5.0"
description = "Spherical aspect-ratio solver: tightest enclosing cone of a point set on the unit sphere."
readme = "readme.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "AJ Friend", email = "ajfriend@gmail.com" }]
keywords = ["spherical", "aspect-ratio", "cone", "geometry", "geodesy", "geospatial", "optimization", "zig"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Zig",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.24"]

# skar.plot_cone needs matplotlib; the core solver doesn't.
[project.optional-dependencies]
plot = ["matplotlib>=3"]

[project.urls]
Homepage = "https://github.com/ajfriend/skar_py"
Repository = "https://github.com/ajfriend/skar_py"
Issues = "https://github.com/ajfriend/skar_py/issues"
"Upstream Zig package" = "https://github.com/ajfriend/skar_zig"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "matplotlib>=3"]  # matplotlib: test plot_cone
# skar's build backend. Not a default group — `just reinstall` syncs it and
# passes `--no-build-isolation-package skar` so a rebuild reuses these from the
# venv (~4s) instead of re-staging a fresh isolated build env (~9s). CI and
# `uv build` don't sync it; they use normal build isolation.
build = ["meson-python>=0.16", "ninja", "cython>=3.0", "ziglang>=0.15.2"]
lab = ["jupyterlab>=4", "matplotlib>=3", "h3", "geopandas>=1", "pyogrio", "s2sphere", "a5_fast"]
# scripts/dggs/ — DGGS survey + area-calibration deps.
# sparea: spherical-polygon areas, used by calibrate.py to match cell sizes.
# a5_fast: Rust/PyO3 A5 binding, ~30x faster than the pure-Python pya5 it
# replaced (boundaries match to ~1e-13 deg).
# dggal: Ecere's DGGS Abstraction Library (BSD-3-Clause), the binding for the
# ISEA/IVEA hex + rHEALPix systems via scripts/dggs/dggal_common.py. dggal/ecrt
# only publish an arch-broken macOS arm64 wheel (it bundles x86_64 dylibs), and
# no native arm64 eC toolchain exists to build from source, so on Apple Silicon
# the DGGS scripts run under an x86_64 (Rosetta) Python 3.13 in a separate env
# (.venv-dggs) — see the `dggs`/`calibrate`/`dnc-sweep` just targets. The
# x86_64 marker keeps dggal out of the native arm64 dev/test resolution.
dggs = ["matplotlib>=3", "h3>=4", "s2sphere", "a5_fast", "sparea>=0.4",
        "dggal; platform_machine == 'x86_64'"]
# scripts/dggs/cells — read pre-generated Parquet cell sets (pyarrow) + plot
# (matplotlib). The analysis side imports no DGGS library, so survey.py etc.
# run natively (no Rosetta) against this group; the cells are produced
# separately by the per-DGGS gen_*.py scripts (see scripts/dggs/cells/README.md).
cells = ["matplotlib>=3", "pyarrow>=15"]
# scripts/states + scripts/countries — geopandas-loaded vector examples.
geo = ["matplotlib>=3", "geopandas>=1", "pyogrio"]

[tool.pytest.ini_options]
addopts = [
    "--cov=skar",
    "--cov=tests",
    "--cov-branch",
    "--cov-report=term-missing",
]

[tool.coverage.run]
branch = true

# Non-editable installs put skar/ under site-packages; alias it back
# to src/skar/ so the coverage report shows the source path.
[tool.coverage.paths]
skar = ["src/skar", "*/site-packages/skar"]


[tool.cibuildwheel]
# uv installs the build deps (meson-python, ziglang, cython, numpy)
# faster than pip.
build-frontend = "build[uv]"
test-requires = ["pytest", "numpy"]
# Override pyproject.toml's addopts (which assume pytest-cov) — the
# coverage report is for local dev, not the per-wheel test envs.
test-command = "pytest {project}/tests -o addopts="
